--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,17 @@
   padding: 5px;
 }
 
+.card > p {
+    display: table;
+    padding: 5px;
+    position: relative;
+    margin: 5px;
+    margin-top: -23%;
+    border: 2px solid #111;
+    color: #111;
+    background: #bbb; p 
+}
+
 .text-card {
   background: #eee;
   margin: 5px;
