--- a/views/character.html
+++ b/views/character.html
@@ -21,6 +21,7 @@
 
 <body>
   <div class="spinner"></div>
+  <div class="header"></div>
   <div class="content-holder">
     <h1></h1>
     <h2>Comics <i class="material-icons" id="comics-btn">add_circle</i></h2>
