styled comic info

--- a/views/comic.html
+++ b/views/comic.html
@@ -15,11 +15,16 @@
         <script src="../js/comic.js"></script>
    </head>
    <body>
+     <div class="header"></div>
      <div class="spinner"></div>
      <div class="content-holder">
-       <h1></h1>
-       <img>
-       <h3></h3>
+       <div class="info-holder">
+        <img>
+        <div class="info">
+          <h1></h1>
+          <h3></h3>
+        </div>
+       </div>
        <h2>Characters <i class="material-icons" id="characters-btn">add_circle</i></h2> 
        <div class="card-container" id="characters"></div>
        <h2>Creators <i class="material-icons" id="creators-btn">add_circle</i></h2>
