--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,11 @@
 @font-face {
-  font-family: komika;
+  font-family: 'komika';
   src: url('Komika_display.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'bebas';
+  src: url('bebas.ttf') format('truetype');
 }
 
 body {
@@ -14,6 +19,38 @@ body {
   background-color: #F0141E;
   background-size: contain;
   height: 150px; 
+}
+
+.info-holder {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    padding: 10px;
+}
+
+.info {
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
+  flex-basis: 50%;
+}
+
+.info > h1 {
+  font-family: bebas;
+  background: #f0141e;
+  padding: 8px;
+  margin: 10px;
+}
+
+.info > h3 {
+  border: 4px solid #333;
+  background: #ff9;
+  font-size: 24px;
+  margin: 10px;
+  padding: 5px;
+  font-family: komika;
+  color: #333;
 }
 
 .card {
