--- a/views/comic.html
+++ b/views/comic.html
@@ -25,9 +25,9 @@
           <h3></h3>
         </div>
        </div>
-       <h2>Characters <i class="material-icons" id="characters-btn">add_circle</i></h2> 
+       <h2>CHARACTERS <i class="material-icons" id="characters-btn">add_circle</i></h2> 
        <div class="card-container" id="characters"></div>
-       <h2>Creators <i class="material-icons" id="creators-btn">add_circle</i></h2>
+       <h2>CREATORS <i class="material-icons" id="creators-btn">add_circle</i></h2>
        <div class="card-container" id="creators"></div>
      </div>
    </body>
