--- a/views/event.html
+++ b/views/event.html
@@ -15,11 +15,16 @@
         <script src="../js/event.js"></script>
    </head>
    <body>
+     <div class="header"></div>
      <div class="spinner"></div>
      <div class="content-holder">
-       <h1></h1>
-       <img>
-       <h3></h3>
+       <div class="info-holder">
+        <img>
+        <div class="info">
+          <h1></h1>
+          <h3></h3>
+        </div>
+       </div>
        <h2>Comics <i class="material-icons" id="comics-btn">add_circle</i></h2>
        <div class="card-container" id="comics"></div>
        <h2>Series <i class="material-icons" id="series-btn">add_circle</i></h2>
