--- a/views/comic.html
+++ b/views/comic.html
@@ -38,10 +38,10 @@
      <div class="spinner"></div>
      <div class="content-holder">
        <div class="info-holder">
-        <img>
+        <a class="main-linkback" style="margin:10px"><img></a>
         <div class="info">
-          <h1></h1>
-          <h3></h3>
+          <a class="main-linkback" style="width:100%"><h1></h1></a>
+          <a class="main-linkback" style="width:100%"><h3></h3></a>
         </div>
        </div>
        <h2>CHARACTERS <i class="material-icons" id="characters-btn">add_circle</i></h2> 
