--- a/views/creator.html
+++ b/views/creator.html
@@ -42,7 +42,7 @@
   </div>
   <div class="spinner"></div>
   <div class="content-holder">
-    <h1></h1>
+    <a class="main-linkback" style="width:100%"><h1></h1></a>
     <h2>Comics <i class="material-icons" id="comics-btn">add_circle</i></h2>
     <div class="card-container" id="comics"></div>
     <h2>Events <i class="material-icons" id="events-btn">add_circle</i></h2>
