--- a/views/search.html
+++ b/views/search.html
@@ -6,7 +6,7 @@
     <form>
       <div>
         <p>Category</p>
-        <select>
+        <select name=type>
           <option value="comics">Comics</option>
           <option value="characters">Characters</option>
           <option value="creators">Creators</option>
@@ -16,7 +16,7 @@
       </div>
       <div>
         <p>Name / Title</p>
-        <input name="search-string" type="search" placeholder="Name/Title or start of it">
+        <input name="search" type="search" placeholder="Name/Title or start of it">
       </div>
       <input type="submit">
     </form>
