--- a/css/main.css
+++ b/css/main.css
@@ -223,7 +223,7 @@ li > a {
   margin: 1px;
 }
 
-.search {
+.search, .about {
   position: fixed;
   top: 200px;
   left: 3%;
@@ -243,6 +243,40 @@ span {
 
 .close > i {
   color: #fff;
+}
+
+.logo > img {
+  height: 18vmin;
+  max-height: 100px;
+}
+
+.logo.mini > img {
+  height: 9vmin;
+  max-height: 50px;
+  margin-left: 5px;
+}
+
+.logo > p {
+  display: inline-block;
+  position: absolute;
+  font-family: komika;
+  color: #fff;
+  font-size: 15vmin;
+  margin-left: -0.15em;
+  letter-spacing: -0.06em;
+}
+
+.logo.mini > p {
+  font-size: 8vmin;
+}
+
+@media all and (min-width: 560px) and (min-height: 560px) {
+  .logo > p {
+    font-size: 85px;
+  }
+  .logo.mini > p {
+    font-size: 42px;
+  }
 }
 
 form {
@@ -291,4 +325,33 @@ form > input[type=submit] {
   box-shadow: 0 1px 3px rgba(0,0,0,0.2);
   font-family: bebas;
   font-size: 24px;
+}
+
+.about-what {
+  font-family: 'bebas';
+  word-spacing: 0.2em;
+  margin: 0 10px;
+}
+
+.about-text {
+  background: #ff9;
+  border: 2px solid #111;
+  color: #111;
+  font-family: 'komika';
+  margin: 5px 10px;
+  padding: 10px;
+}
+
+.about-footer {
+  display: flex;
+  justify-content: space-between;
+}
+
+.about-footer p {
+  font-family: 'komika';
+  background: #bbb;
+  color: #111;
+  margin: 10px;
+  border: 2px solid #111;
+  padding: 2px 10px;
 }
