--- a/views/event.html
+++ b/views/event.html
@@ -57,5 +57,11 @@
        <h2>Creators <i class="material-icons" id="creators-btn">add_circle</i></h2>
        <div class="card-container" id="creators"></div>    
      </div>
+      <div class="footer">
+        <p>Data provided by Marvel. © 2014 Marvel</p>
+        <div class="footer-info"><a href="mailto:andreas.ostlund@spelpunkten.com"><p>&copy Andreas Ostlund</p></a></div>
+        <div class="footer-info"><a href="https://www.linkedin.com/in/andreas-östlund-42945467"><p>LinkedIn</p></a></div>
+        <div class="footer-info"><a href="https://github.com/aostlund"><p>Github</p></a></div>
+      </div>
    </body>
 </html>
