--- a/css/main.css
+++ b/css/main.css
@@ -365,3 +365,30 @@ form > input[type=submit] {
   right: 0;
   background: rgba(0,0,0,0.6);
 }
+
+.footer {
+  display: flex;
+  position: fixed;
+  bottom: 0;
+  background: #f0141e;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.footer p {
+  margin: 2px 10px;
+  color: #fff;
+  font-family: 'bebas';
+  word-spacing: 0.15em;
+  letter-spacing: 0.01em;
+}
+
+.footer-info {
+  display: none; 
+}
+
+@media all and (min-width: 600px) {
+  .footer-info {
+    display: block;
+  }
+}
