--- a/views/creator.html
+++ b/views/creator.html
@@ -54,6 +54,12 @@
     <h2>Series <i class="material-icons" id="series-btn">add_circle</i></h2>
     <div class="card-container" id="series"></div>
   </div>
+  <div class="footer">
+    <p>Data provided by Marvel. © 2014 Marvel</p>
+    <div class="footer-info"><a href="mailto:andreas.ostlund@spelpunkten.com"><p>&copy Andreas Ostlund</p></a></div>
+    <div class="footer-info"><a href="https://www.linkedin.com/in/andreas-östlund-42945467"><p>LinkedIn</p></a></div>
+    <div class="footer-info"><a href="https://github.com/aostlund"><p>Github</p></a></div>
+  </div>
 </body>
 
 </html>
