--- a/views/comic.html
+++ b/views/comic.html
@@ -25,7 +25,7 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
               </button>
-          <a class="logo" href="index.html">
+          <a class="logo" href="/index.html">
             <img src="../img/marvel-logo.svg">
             <p>ous!</p>
           </a>
