--- a/css/main.css
+++ b/css/main.css
@@ -72,6 +72,10 @@ a {
   height: 365px;
 }
 
+.card:hover {
+  box-shadow: 0 8px 12px rgba(0,0,0,0.25);
+}
+
 .card > img {
   width: 100%;
   padding: 10px;
@@ -94,6 +98,10 @@ a {
   margin: 5px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.25);
   width: 250px;
+}
+
+.text-card:hover {
+  box-shadow: 0 8px 12px rgba(0,0,0,0.25);
 }
 
 .text-card > p {
@@ -329,6 +337,10 @@ form > input[type=submit] {
   box-shadow: 0 1px 3px rgba(0,0,0,0.2);
   font-family: bebas;
   font-size: 24px;
+}
+
+form > input[type=submit]:hover {
+  box-shadow: 0 8px 12px rgba(0,0,0,0.2);
 }
 
 .about-what {
