--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+/*-------------
+ Font loading
+-------------*/
 @font-face {
   font-family: 'komika';
   src: url('Komika_display.ttf') format('truetype');
@@ -8,6 +11,10 @@
   src: url('bebas.ttf') format('truetype');
 }
 
+/*--------------
+ Common for all
+--------------*/
+
 body {
   background: #ddd !important;
   color: #fff !important;
@@ -17,115 +24,9 @@ a {
   text-decoration: none !important;
 }
 
-.header {
-  background: url(../img/marvel-logo.svg) no-repeat;
-  width: 100%;
-  background-color: #F0141E;
-  background-size: contain;
-  height: 150px; 
-}
-
-.info-holder {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.info-holder img {
-  max-width: 100%;
-}
-
-.info {
-  display: flex;
-  flex-grow: 1;
-  flex-direction: column;
-  flex-basis: 50%;
-  margin: 10px;
-  font-family: 'komika';
-  color: #111;
-}
-
-.info-holder > .info h1 {
-  color: #fff;
-  font-family: bebas;
-  background: #f0141e;
-  letter-spacing: -0.05em;
-  word-spacing: 0.3em;
-  padding: 8px;
-  margin: 0;
-}
-
-.info h3 {
-  border: 4px solid #333;
-  background: #ff9;
-  font-size: 24px;
-  padding: 5px;
-  font-family: komika;
-  color: #333;
-}
-
-.card {
-  background: #eee;
-  margin: 5px;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.25);
-  width: 250px;
-  height: 365px;
-}
-
-.card:hover {
-  box-shadow: 0 8px 12px rgba(0,0,0,0.25);
-}
-
-.card > img {
-  width: 100%;
-  padding: 10px;
-}
-
-.card > p {
-  font-family: 'komika';
-  display: table;
-  padding: 5px;
-  position: relative;
-  margin: 10px;
-  margin-top: -33%;
-  border: 2px solid #111;
-  color: #111;
-  background: #bbb; p 
-}
-
-.text-card {
-  background: #eee;
-  margin: 5px;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.25);
-  width: 250px;
-}
-
-.text-card:hover {
-  box-shadow: 0 8px 12px rgba(0,0,0,0.25);
-}
-
-.text-card > p {
-  font-family: 'komika';
-  padding: 5px;
-  border: 2px solid #111;
-  color: #111;
-  background: #bbb; p 
-}
-
-.card-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-}
-
-.linkback {
-  height: 20px;
-  position: relative;
-  float: right;
-  margin: -355px 10px 0 0;
-}
+/*-------
+ Content
+-------*/
 
 .content-holder {
   padding-top: 7.16em;
@@ -183,8 +84,52 @@ a {
   margin-top: 5px;
 }
 
+.linkback {
+  height: 20px;
+  position: relative;
+  float: right;
+  margin: -355px 10px 0 0;
+}
+
+.icon-bar {
+  background: #fff !important;
+}
+
+/*-------------------------------
+ Header with navigation and logo
+-------------------------------*/
+
+.header {
+  background: url(../img/marvel-logo.svg) no-repeat;
+  width: 100%;
+  background-color: #F0141E;
+  background-size: contain;
+  height: 150px; 
+}
+
 .logo {
   margin-left: 4px;
+}
+
+.logo > img {
+  height: 18vmin;
+  max-height: 100px;
+}
+
+.logo > p {
+  display: inline-block;
+  position: absolute;
+  font-family: komika;
+  color: #fff;
+  font-size: 15vmin;
+  margin-left: -0.15em;
+  letter-spacing: -0.06em;
+}
+
+@media all and (min-width: 560px) and (min-height: 560px) {
+  .logo > p {
+    font-size: 85px;
+  }
 }
 
 #navbar {
@@ -228,71 +173,117 @@ li > a {
   margin-right: 10px !important;
 }
 
-.icon-bar {
-  background: #fff !important;
-}
-
 #navbar.in > ul.nav {
   width: 100%;
   margin: 1px;
 }
 
-.search, .about {
-  position: fixed;
-  top: 200px;
-  left: 3%;
-  right: 3%;
+/*------------
+ Info details
+------------*/
+
+.info-holder {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.info-holder img {
+  max-width: 100%;
+}
+
+.info {
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
+  flex-basis: 50%;
+  margin: 10px;
+  font-family: 'komika';
+  color: #111;
+}
+
+.info-holder > .info h1 {
+  color: #fff;
+  font-family: bebas;
   background: #f0141e;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.17), 0 4px 6px rgba(0,0,0,0.23);
-  margin: 0 auto;
-  max-width: 800px;
-  z-index: 10;
+  letter-spacing: -0.05em;
+  word-spacing: 0.3em;
+  padding: 8px;
+  margin: 0;
 }
 
-span {
-  font-family: 'bebas';
-  font-size: 30px;
-  letter-spacing: -0.07em;
-  margin: 5px 10px;
-}
-
-.close > i {
-  color: #fff;
-}
-
-.logo > img {
-  height: 18vmin;
-  max-height: 100px;
-}
-
-.logo.mini > img {
-  height: 9vmin;
-  max-height: 50px;
-  margin-left: 5px;
-}
-
-.logo > p {
-  display: inline-block;
-  position: absolute;
+.info h3 {
+  border: 4px solid #333;
+  background: #ff9;
+  font-size: 24px;
+  padding: 5px;
   font-family: komika;
-  color: #fff;
-  font-size: 15vmin;
-  margin-left: -0.15em;
-  letter-spacing: -0.06em;
+  color: #333;
 }
 
-.logo.mini > p {
-  font-size: 8vmin;
+/*----------
+ Item cards
+----------*/
+
+.card {
+  background: #eee;
+  margin: 5px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.25);
+  width: 250px;
+  height: 365px;
 }
 
-@media all and (min-width: 560px) and (min-height: 560px) {
-  .logo > p {
-    font-size: 85px;
-  }
-  .logo.mini > p {
-    font-size: 42px;
-  }
+.card:hover {
+  box-shadow: 0 8px 12px rgba(0,0,0,0.25);
 }
+
+.card > img {
+  width: 100%;
+  padding: 10px;
+}
+
+.card > p {
+  font-family: 'komika';
+  display: table;
+  padding: 5px;
+  position: relative;
+  margin: 10px;
+  margin-top: -33%;
+  border: 2px solid #111;
+  color: #111;
+  background: #bbb; p 
+}
+
+.text-card {
+  background: #eee;
+  margin: 5px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.25);
+  width: 250px;
+}
+
+.text-card:hover {
+  box-shadow: 0 8px 12px rgba(0,0,0,0.25);
+}
+
+.text-card > p {
+  font-family: 'komika';
+  padding: 5px;
+  border: 2px solid #111;
+  color: #111;
+  background: #bbb; p 
+}
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+/*----------
+ Search box
+----------*/
 
 form {
   display: flex;
@@ -346,6 +337,49 @@ form > input[type=submit]:hover {
   box-shadow: 0 8px 12px rgba(0,0,0,0.2);
 }
 
+.search, .about {
+  position: fixed;
+  top: 200px;
+  left: 3%;
+  right: 3%;
+  background: #f0141e;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.17), 0 4px 6px rgba(0,0,0,0.23);
+  margin: 0 auto;
+  max-width: 800px;
+  z-index: 10;
+}
+
+span {
+  font-family: 'bebas';
+  font-size: 30px;
+  letter-spacing: -0.07em;
+  margin: 5px 10px;
+}
+
+.close > i {
+  color: #fff;
+}
+
+/*---------
+ About box
+---------*/
+
+.logo.mini > img {
+  height: 9vmin;
+  max-height: 50px;
+  margin-left: 5px;
+}
+
+.logo.mini > p {
+  font-size: 8vmin;
+}
+
+@media all and (min-width: 560px) and (min-height: 560px) {
+  .logo.mini > p {
+    font-size: 42px;
+  }
+}
+
 .about-what {
   font-family: 'bebas';
   word-spacing: 0.2em;
@@ -383,6 +417,10 @@ form > input[type=submit]:hover {
   right: 0;
   background: rgba(0,0,0,0.6);
 }
+
+/*------
+ Footer
+------*/
 
 .footer {
   display: flex;
